--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,8 +3,11 @@ name: Docker Image CI
 on:
   push:
     tags: [ '*' ]
+    branches: [ master ]
+    paths: [ 'Dockerfile' ]
   pull_request:
     branches: [ master ]
+    paths: [ 'Dockerfile' ]
 
 jobs:
 
@@ -24,4 +27,4 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
         repository: labwaller/base
         tag_with_ref: true
-        push: ${{ startsWith(github.ref, 'refs/tags/') }}
+        push: ${{ startsWith(github.ref, 'refs/tags/') || startsWith(github.ref, 'refs/heads/master') }}
